--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ nltk==3.6.5
 torchvision==0.14.1
 pip==21.3.1
 transformers==4.26.1
-datasets==1.15.0
+datasets==2.1.0
 sentencepiece==0.1.96
 sacrebleu==2.0.0
+soundfile==0.12.1
+librosa==0.10.0
